@@ -1,3 +1,7 @@
+2008-03-21  Andreas Kirschbaum
+
+	* Do not crash when connecting to an outdated server.
+
 2008-03-19  Andreas Kirschbaum
 
 	* ragnorok: Make the "Chat" tab (somewhat) work on branch servers.
